--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,31 +12,31 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".CurrentScoreActivity"
+            android:name=".activities.CurrentScoreActivity"
             android:label="@string/title_activity_current_score"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".GameplayActivity"
+            android:name=".activities.GameplayActivity"
             android:label="@string/title_activity_list_data"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".RulesActivity"
+            android:name=".activities.RulesActivity"
             android:label="@string/title_activity_rules"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".PairUpPlayersActivity"
+            android:name=".activities.PairUpPlayersActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".FinalActivity"
+            android:name=".activities.FinalActivity"
             android:label="FinalActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -46,7 +46,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PopUpActivity"
+            android:name=".activities.PopUpActivity"
             android:theme="@style/AppTheme.CustomTheme" />
     </application>
 
